fix: scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,30 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .new-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    .new-scrollbar::-webkit-scrollbar-thumb {
+      background: rgb(131, 131, 131);
+      background: linear-gradient(
+        0deg,
+        rgba(131, 131, 131, 0.45) 0%,
+        rgba(131, 131, 131, 0.6) 100%
+      );
+      border-radius: 10px;
+      max-height: 40px;
+    }
+
+    .new-scrollbar::-webkit-scrollbar {
+      width: 7px;
+    }
+  }
+}
+
 html,
 body {
   height: 100%;
